feat: enhance navigation and add new pages for benchmarks, integration, and roadmap
- Update Navbar component to support dynamic language-based routing for new sections.
- Introduce new pages for Benchmarks, Integration, and Roadmap with multi-language support.
- Modify QuickStart component and index pages to improve layout and user experience.
- Add integration and roadmap translations in English and Chinese.

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -4,6 +4,8 @@
     "benchmarks": "Benchmarks",
     "docs": "Docs",
     "playground": "Playground",
+    "integration": "Integration",
+    "roadmap": "Roadmap",
     "github": "GitHub"
   },
   "hero": {
