--- a/src/i18n/zh-CN.json
+++ b/src/i18n/zh-CN.json
@@ -3,162 +3,173 @@
     "features": "特性",
     "benchmarks": "基准测试",
     "docs": "文档",
-    "playground": "演练场",
+    "playground": "试用",
     "integration": "集成",
     "roadmap": "路线图",
     "github": "GitHub"
   },
   "hero": {
     "badge": "v0.2.0 已发布",
-    "title_part1": "Ordo: 极致性能的",
+    "title_part1": "Ordo: 极致性能",
     "title_part2": "Rust 规则引擎",
-    "subtitle": "专为高并发业务设计，提供 1.63µs 极低延迟与 500,000+ QPS 吞吐量。内置可视化编辑器，支持 WASM 实时执行。",
-    "cta_playground": "立即体验 Playground",
-    "cta_github": "在 GitHub 上查看",
-    "stat_latency": "平均执行延迟",
-    "stat_qps": "每秒执行次数",
-    "stat_comparison": "快于 1ms 目标",
-    "stat_rust": "Rust 构建"
+    "subtitle": "专为高并发业务设计，提供 1.63µs 超低延迟和 500,000+ QPS 吞吐量。内置可视化编辑器，支持 WebAssembly 实时执行。",
+    "cta_playground": "立即试用",
+    "cta_github": "查看源码",
+    "stat_latency": "规则执行",
+    "stat_qps": "吞吐量",
+    "stat_eval": "表达式求值",
+    "stat_api": "HTTP API"
+  },
+  "flow": {
+    "title": "Ordo 如何工作",
+    "desc": "Ordo 以惊人的速度和精度处理请求。以下是执行流程的直观展示。",
+    "input_title": "输入 JSON",
+    "output_title": "决策结果",
+    "engine_title": "Ordo 引擎",
+    "stat_latency": "规则执行",
+    "stat_throughput": "吞吐量",
+    "stat_api": "HTTP API",
+    "stat_p99": "P99 延迟"
   },
   "benchmarks": {
     "title": "基准测试结果",
-    "description": "基于 Apple Silicon (M-series) 芯片单线程测试，Ordo 展现了远超行业标准的极致性能。",
+    "description": "在 Apple Silicon (M系列) 上的单线程测试表明，Ordo 的性能远超行业标准。",
     "chart_title": "执行延迟对比 (µs)",
     "chart_low_better": "越低越好",
-    "chart_traditional": "传统规则引擎 (典型值)",
-    "chart_ordo": "Ordo Rule Engine",
-    "chart_note": "* 性能提升约 600 倍，使得实时业务决策无感知。",
-    "stat_eval": "表达式求值耗时",
-    "stat_api_qps": "HTTP API 单线程吞吐",
+    "chart_traditional": "传统引擎 (典型值)",
+    "chart_ordo": "Ordo 规则引擎",
+    "chart_note": "* 性能提升约 600 倍，让实时业务决策“隐形”。",
+    "stat_eval": "表达式求值时间",
+    "stat_api_qps": "HTTP API 单线程 QPS",
     "stat_p99": "HTTP API P99 延迟",
-    "stat_heap": "规则执行热路径",
-    "modes_title": "多层次执行架构",
-    "modes_desc": "从开发调试到极端性能需求，Ordo 提供全场景覆盖的执行模式。",
-    "mode_treewalk": "AST 遍历",
-    "mode_treewalk_desc": "直接解析执行，适用于开发调试与一次性规则。",
-    "mode_vm": "Bytecode VM",
-    "mode_vm_desc": "编译为高效字节码，生产环境默认，平衡动态性与性能。",
+    "stat_heap": "热路径堆分配",
+    "modes_title": "多级执行架构",
+    "modes_desc": "从开发调试到极致性能需求，Ordo 覆盖所有场景。",
+    "mode_treewalk": "AST 解释执行",
+    "mode_treewalk_desc": "直接解释执行，适合开发调试和一次性规则。",
+    "mode_vm": "字节码虚拟机",
+    "mode_vm_desc": "高效字节码，生产环境默认，平衡灵活与速度。",
     "mode_vectorized": "向量化执行",
-    "mode_vectorized_desc": "列式批量处理，大幅提升大规模数据校验吞吐量。",
+    "mode_vectorized_desc": "列式批处理，大规模数据校验的吞吐量怪兽。",
     "mode_jit": "Schema-Aware JIT",
-    "mode_jit_desc": "即时编译为机器码，将延迟压缩至纳秒级，压榨硬件极限。",
+    "mode_jit_desc": "编译为原生机器码，将延迟压缩至纳秒级。",
     "jit_title": "即将推出: Schema-Aware JIT",
-    "jit_desc": "通过将规则编译为机器码，性能再次飞跃。在复杂场景下比现有虚拟机快 30 倍。",
-    "jit_latency": "单次执行延迟",
-    "jit_throughput": "峰值吞吐量",
+    "jit_desc": "通过将规则编译为机器码，再次实现性能飞跃。在复杂场景下比现有 VM 快 30 倍。",
+    "jit_latency": "求值延迟",
+    "jit_throughput": "峰值吞吐",
     "jit_speedup": "性能提升"
   },
   "features": {
     "title": "核心特性",
-    "description": "Ordo 不仅仅是一个规则引擎，它是一个完整的规则全生命周期管理平台。",
-    "editor_title": "可视化规则编辑",
-    "editor_desc": "拖拽式 Flow 编辑与结构化 Form 编辑双模式，降低规则维护门槛。",
+    "description": "Ordo 不仅仅是一个规则引擎，更是一个完整的规则生命周期管理平台。",
+    "editor_title": "可视化规则编辑器",
+    "editor_desc": "提供拖拽式流程图和结构化表单双模式编辑，极大降低业务维护门槛。",
     "performance_title": "极致性能引擎",
-    "performance_desc": "基于 Rust 构建，支持百万级 QPS，1.63µs 执行延迟，适合金融支付场景。",
-    "wasm_title": "WASM 实时执行",
-    "wasm_desc": "规则可以在浏览器端通过 WebAssembly 实时预览效果，并支持执行追踪调试。",
-    "audit_title": "规则版本与审计",
-    "audit_desc": "内置规则版本管理，支持一键回滚。全量审计日志，满足合规审计需求。",
+    "performance_desc": "全 Rust 构建，支持百万级 QPS 和 1.63µs 延迟，完美适配金融支付场景。",
+    "wasm_title": "WebAssembly 实时执行",
+    "wasm_desc": "通过 WebAssembly 在浏览器端即时预览规则执行结果，支持可视化追踪调试。",
+    "audit_title": "版本与审计",
+    "audit_desc": "内置版本管理，支持一键回滚。完整的审计日志记录，满足合规要求。",
     "tenant_title": "多租户与隔离",
-    "tenant_desc": "Namespace 级别的规则隔离与租户级 QPS 限制，轻松支撑 SaaS 业务。",
+    "tenant_desc": "支持命名空间级别的规则隔离和租户级 QPS 限制，轻松支持 SaaS 业务。",
     "integration_title": "全方位集成",
-    "integration_desc": "提供 HTTP REST、gRPC 接口，并支持 Go、Java、Python 等多语言 SDK。",
+    "integration_desc": "提供 HTTP REST、gRPC 接口，以及 Go、Java、Python 等多语言 SDK。",
     "usecase_title": "应用场景",
     "usecase_finance": "金融风控",
-    "usecase_finance_desc": "实时反欺诈、信贷策略评估，毫秒级响应海量交易请求。",
+    "usecase_finance_desc": "实时反欺诈、信用策略评估，毫秒级响应海量请求。",
     "usecase_ecommerce": "电商营销",
-    "usecase_ecommerce_desc": "动态优惠券发放、限时秒杀逻辑，灵活调整促销策略。",
+    "usecase_ecommerce_desc": "动态发券、秒杀活动逻辑，支持灵活多变的促销策略。",
     "usecase_routing": "智能路由",
-    "usecase_routing_desc": "支付通道选择、流量动态分发，基于实时数据自动寻址。"
+    "usecase_routing_desc": "根据实时数据进行支付通道优选和流量动态分发。"
   },
   "code": {
-    "title": "易于定义，秒级执行",
-    "desc": "Ordo 使用直观的 JSON/YAML 格式定义规则。支持丰富的表达式语法，包括数学运算、逻辑判断和内置函数。通过简单的 API 调用，即可在微秒级时间内获得决策结果与详细的执行轨迹。",
+    "title": "定义简单，执行极速",
+    "desc": "Ordo 使用直观的 JSON/YAML 格式。支持丰富的表达式语法，包括数学、逻辑运算和内置函数。只需简单的 API 调用即可在微秒级获得决策结果和详细追踪。",
     "step1_title": "结构化规则定义",
-    "step1_desc": "定义步骤流与决策逻辑",
-    "step2_title": "高性能评估",
-    "step2_desc": "极致优化的求值引擎",
+    "step1_desc": "定义步骤流转和决策逻辑",
+    "step2_title": "高性能求值",
+    "step2_desc": "经过优化的求值引擎",
     "step3_title": "可视化追踪",
-    "step3_desc": "详细的执行路径溯源"
+    "step3_desc": "详细的执行路径追踪"
   },
   "editor": {
     "title": "直观的可视化编辑器",
-    "desc": "无需编写代码即可设计复杂的决策流。Ordo 提供了功能强大的可视化编辑器，支持实时预览与调试。",
+    "desc": "无需编写代码即可设计复杂的决策流程。Ordo 提供强大的可视化编辑器，支持实时预览和调试。",
     "sidebar_steps": "决策步骤",
     "sidebar_decision": "决策节点",
-    "sidebar_terminal": "终端节点",
+    "sidebar_terminal": "终结节点",
     "sidebar_jump": "跳转节点",
     "sidebar_config": "规则配置",
-    "cta_playground": "进入 Live Playground 试用",
+    "cta_playground": "试用在线演示",
     "view_multi": "多视图切换",
-    "view_multi_desc": "在 Flow 视图与 Form 视图间无缝切换，适应不同编辑习惯。",
-    "view_wasm": "实时执行预览",
-    "view_wasm_desc": "基于 WASM 技术，在浏览器中即可获得与服务端完全一致的执行结果。",
+    "view_multi_desc": "无缝切换流程图和表单视图，适应不同编辑习惯。",
+    "view_wasm": "实时执行",
+    "view_wasm_desc": "使用 WASM 在浏览器中获得与服务端完全一致的执行结果。",
     "view_trace": "执行路径追踪",
-    "view_trace_desc": "可视化展示规则执行经过的每一个节点，让逻辑纠错变得异常简单。"
+    "view_trace_desc": "可视化追踪规则执行的每一个节点，让调试变得轻松自如。"
   },
   "cta": {
-    "title": "准备好提升业务决策效率了吗？",
-    "desc": "加入我们，体验极致性能与可视化编辑带来的开发效率革命。Ordo 已在 GitHub 开源。",
-    "btn_start": "快速开始",
-    "btn_playground": "Playground 演示"
+    "title": "准备好提升您的业务决策了吗？",
+    "desc": "加入我们，体验性能与可视化编辑带来的开发效率革命。Ordo 已在 GitHub 开源。",
+    "btn_start": "开始使用",
+    "btn_playground": "演示 Playground"
   },
   "footer": {
-    "desc": "高性能、极简、自洽的 Rust 规则引擎。为金融、支付和高并发业务场景而生。",
+    "desc": "高性能、极简、自包含的 Rust 规则引擎，专为金融、支付和高并发业务打造。",
     "product": "产品",
     "resources": "资源",
     "feedback": "反馈",
-    "license": "开源许可证"
+    "license": "许可"
   },
   "integration": {
-    "title": "全方位集成能力",
-    "desc": "Ordo 提供多种集成方式，无论是微服务架构、浏览器端还是本地高性能场景，都能完美适配。",
+    "title": "全方位集成",
+    "desc": "Ordo 提供多种集成方式，完美适配微服务、浏览器端或本地高性能场景。",
     "http_create": "创建规则集",
     "http_execute": "执行规则",
-    "grpc_execute": "执行规则并获取追踪",
-    "wasm_execute": "浏览器端执行规则",
+    "grpc_execute": "带追踪执行",
+    "wasm_execute": "浏览器端执行",
     "sdk_title": "多语言 SDK 支持",
-    "deploy_title": "部署与接入方式",
-    "deploy_desc": "Ordo 支持从云端微服务到浏览器边缘端的全场景部署。",
-    "invoke_title": "多样化调用协议",
-    "invoke_desc": "标准化的接口协议，确保在任何技术栈下都能实现极速响应。",
-    "method_cloud": "云端服务部署",
-    "method_cloud_desc": "支持 Docker/K8s/Nomad，通过 HTTP/gRPC 提供中心化规则服务。",
-    "method_edge": "边缘/客户端接入",
-    "method_edge_desc": "通过 WASM 在浏览器或边缘节点直接执行，零延迟无网络开销。",
-    "method_embedded": "原生嵌入集成",
-    "method_embedded_desc": "作为 Rust 库直接编译进业务应用，实现真正的零抽象损耗。",
-    "status_stable": "已发布",
+    "deploy_title": "部署与连接",
+    "deploy_desc": "Ordo 支持从云端微服务到浏览器边缘节点的所有场景。",
+    "invoke_title": "灵活调用协议",
+    "invoke_desc": "标准化的协议确保在任何技术栈中都能获得极速响应。",
+    "method_cloud": "云端服务",
+    "method_cloud_desc": "通过 Docker/K8s/Nomad 部署，提供 HTTP/gRPC 服务。",
+    "method_edge": "边缘与客户端",
+    "method_edge_desc": "通过 WASM 直接在浏览器或边缘节点执行，零网络延迟。",
+    "method_embedded": "原生嵌入",
+    "method_embedded_desc": "直接编译进 Rust 应用，零开销集成。",
+    "status_stable": "稳定",
     "status_beta": "测试中",
     "status_soon": "即将推出"
   },
   "quickstart": {
     "title": "快速开始",
-    "desc": "通过 Docker 在 2 分钟内启动 Ordo Server 并执行你的第一条规则。",
+    "desc": "使用 Docker 在 2 分钟内启动 Ordo Server 并执行您的第一条规则。",
     "step1_title": "1. 启动 Ordo Server",
     "step1_desc": "拉取并运行官方 Docker 镜像",
-    "step2_title": "2. 确认服务状态",
+    "step2_title": "2. 验证状态",
     "step2_desc": "检查健康检查接口",
     "step3_title": "3. 执行规则",
     "step3_desc": "通过 REST API 发送执行请求"
   },
   "syntax": {
-    "title": "表达式语法速查",
-    "desc": "Ordo 使用类 C 语法，支持丰富的运算符与内置函数，性能损耗极低。",
+    "title": "表达式语法",
+    "desc": "Ordo 使用类 C 语法，支持丰富的运算符和内置函数，确保极低的开销。",
     "operators": "运算符",
-    "functions": "内置函数",
-    "conditionals": "条件表达式",
+    "functions": "函数",
+    "conditionals": "条件语句",
     "op_logical": "逻辑运算",
     "op_comparison": "比较运算",
-    "fn_string": "字符串处理",
-    "fn_array": "集合运算",
+    "fn_string": "字符串函数",
+    "fn_array": "数组函数",
     "fn_math": "数学函数"
   },
   "roadmap": {
-    "title": "发展路线图",
-    "desc": "Ordo 正在快速演进中，致力于成为最快、最易用的企业级规则引擎。",
+    "title": "开发路线图",
+    "desc": "Ordo 正在快速演进，旨在成为最快、最易用的企业级规则引擎。",
     "status_done": "已完成",
-    "status_doing": "开发中",
-    "status_todo": "规划中"
+    "status_doing": "进行中",
+    "status_todo": "计划中"
   }
 }
