--- a/src/i18n/zh-TW.json
+++ b/src/i18n/zh-TW.json
@@ -3,162 +3,173 @@
     "features": "特性",
     "benchmarks": "基準測試",
     "docs": "文檔",
-    "playground": "演練場",
+    "playground": "試用",
     "integration": "集成",
     "roadmap": "路線圖",
     "github": "GitHub"
   },
   "hero": {
     "badge": "v0.2.0 已發布",
-    "title_part1": "Ordo: 極致性能的",
+    "title_part1": "Ordo: 極致性能",
     "title_part2": "Rust 規則引擎",
-    "subtitle": "專為高併發業務設計，提供 1.63µs 極低延遲與 500,000+ QPS 吞吐量。內置可视化編輯器，支持 WASM 實時執行。",
-    "cta_playground": "立即體驗 Playground",
-    "cta_github": "在 GitHub 上查看",
-    "stat_latency": "平均執行延遲",
-    "stat_qps": "每秒執行次數",
-    "stat_comparison": "快於 1ms 目標",
-    "stat_rust": "Rust 構建"
+    "subtitle": "專為高並發業務設計，提供 1.63µs 超低延遲和 500,000+ QPS 吞吐量。內置可視化編輯器，支持 WebAssembly 實時執行。",
+    "cta_playground": "立即試用",
+    "cta_github": "查看源碼",
+    "stat_latency": "規則執行",
+    "stat_qps": "吞吐量",
+    "stat_eval": "表達式求值",
+    "stat_api": "HTTP API"
+  },
+  "flow": {
+    "title": "Ordo 如何工作",
+    "desc": "Ordo 以驚人的速度和精度處理請求。以下是執行流程的直觀展示。",
+    "input_title": "輸入 JSON",
+    "output_title": "決策結果",
+    "engine_title": "Ordo 引擎",
+    "stat_latency": "規則執行",
+    "stat_throughput": "吞吐量",
+    "stat_api": "HTTP API",
+    "stat_p99": "P99 延遲"
   },
   "benchmarks": {
     "title": "基準測試結果",
-    "description": "基於 Apple Silicon (M-series) 芯片單線程測試，Ordo 展現了遠超行業標準的極致性能。",
+    "description": "在 Apple Silicon (M系列) 上的單線程測試表明，Ordo 的性能遠超行業標準。",
     "chart_title": "執行延遲對比 (µs)",
     "chart_low_better": "越低越好",
-    "chart_traditional": "傳統規則引擎 (典型值)",
-    "chart_ordo": "Ordo Rule Engine",
-    "chart_note": "* 性能提升約 600 倍，使得實時業務決策無感知。",
-    "stat_eval": "表達式求值耗時",
-    "stat_api_qps": "HTTP API 單線程吞吐",
+    "chart_traditional": "傳統引擎 (典型值)",
+    "chart_ordo": "Ordo 規則引擎",
+    "chart_note": "* 性能提升約 600 倍，讓實時業務決策“隱形”。",
+    "stat_eval": "表達式求值時間",
+    "stat_api_qps": "HTTP API 單線程 QPS",
     "stat_p99": "HTTP API P99 延遲",
-    "stat_heap": "規則執行熱路徑",
-    "modes_title": "多層次執行架构",
-    "modes_desc": "从开发调试到极端性能需求，Ordo 提供全场景覆盖的执行模式。",
-    "mode_treewalk": "AST 遍历",
-    "mode_treewalk_desc": "直接解析执行，适用于开发调试与一次性规则。",
-    "mode_vm": "Bytecode VM",
-    "mode_vm_desc": "编译为高效字节码，生产环境默认，平衡动态性与性能。",
-    "mode_vectorized": "向量化执行",
-    "mode_vectorized_desc": "列式批量处理，大幅提升大规模数据校验吞吐量。",
+    "stat_heap": "熱路徑堆分配",
+    "modes_title": "多級執行架構",
+    "modes_desc": "從開發調試到極致性能需求，Ordo 覆蓋所有場景。",
+    "mode_treewalk": "AST 解釋執行",
+    "mode_treewalk_desc": "直接解釋執行，適合開發調試和一次性規則。",
+    "mode_vm": "字節碼虛擬機",
+    "mode_vm_desc": "高效字節碼，生產環境默認，平衡靈活與速度。",
+    "mode_vectorized": "向量化執行",
+    "mode_vectorized_desc": "列式批處理，大規模數據校驗的吞吐量怪獸。",
     "mode_jit": "Schema-Aware JIT",
-    "mode_jit_desc": "即时编译为机器码，将延迟压缩至纳秒级，压榨硬件极限。",
+    "mode_jit_desc": "編譯為原生機器碼，將延遲壓縮至納秒級。",
     "jit_title": "即將推出: Schema-Aware JIT",
-    "jit_desc": "通過將規則編譯為機器碼，性能再次飛躍。在複雜場景下比現有虛擬機快 30 倍。",
-    "jit_latency": "單次執行延遲",
-    "jit_throughput": "峰值吞吐量",
+    "jit_desc": "通過將規則編譯為機器碼，再次實現性能飛躍。在複雜場景下比現有 VM 快 30 倍。",
+    "jit_latency": "求值延遲",
+    "jit_throughput": "峰值吞吐",
     "jit_speedup": "性能提升"
   },
   "features": {
     "title": "核心特性",
-    "description": "Ordo 不僅僅是一個規則引擎，它是一個完整的規則全生命週期管理平台。",
-    "editor_title": "可视化規則編輯",
-    "editor_desc": "拖拽式 Flow 編輯與結構化 Form 編輯雙模式，降低規則維護門檻。",
+    "description": "Ordo 不僅僅是一個規則引擎，更是一個完整的規則生命週期管理平台。",
+    "editor_title": "可視化規則編輯器",
+    "editor_desc": "提供拖拽式流程圖和結構化表單雙模式編輯，極大降低業務維護門檻。",
     "performance_title": "極致性能引擎",
-    "performance_desc": "基於 Rust 構建，支持百萬級 QPS，1.63µs 執行延遲，適合金融支付場景。",
-    "wasm_title": "WASM 實時執行",
-    "wasm_desc": "規則可以在瀏覽器端通過 WebAssembly 實時預覽效果，並支持執行追踪調試。",
-    "audit_title": "規則版本與審計",
-    "audit_desc": "內置規則版本管理，支持一鍵回滾。全量審計日誌，滿足合規審計需求。",
+    "performance_desc": "全 Rust 構建，支持百萬級 QPS 和 1.63µs 延遲，完美適配金融支付場景。",
+    "wasm_title": "WebAssembly 實時執行",
+    "wasm_desc": "通過 WebAssembly 在瀏覽器端即時預覽規則執行結果，支持可視化追蹤調試。",
+    "audit_title": "版本與審計",
+    "audit_desc": "內置版本管理，支持一鍵回滾。完整的審計日誌記錄，滿足合規要求。",
     "tenant_title": "多租戶與隔離",
-    "tenant_desc": "Namespace 級別的規則隔離與租戶級 QPS 限制，輕鬆支撐 SaaS 業務。",
+    "tenant_desc": "支持命名空間級別的規則隔離和租戶級 QPS 限制，輕鬆支持 SaaS 業務。",
     "integration_title": "全方位集成",
-    "integration_desc": "提供 HTTP REST、gRPC 接口，並支持 Go、Java、Python 等多語言 SDK。",
+    "integration_desc": "提供 HTTP REST、gRPC 接口，以及 Go、Java、Python 等多語言 SDK。",
     "usecase_title": "應用場景",
     "usecase_finance": "金融風控",
-    "usecase_finance_desc": "實時反欺詐、信貸策略評估，毫秒級響應海量交易請求。",
+    "usecase_finance_desc": "實時反欺詐、信用策略評估，毫秒級響應海量請求。",
     "usecase_ecommerce": "電商營銷",
-    "usecase_ecommerce_desc": "動態優惠券發放、限時秒殺邏輯，靈活調整促銷策略。",
+    "usecase_ecommerce_desc": "動態發券、秒殺活動邏輯，支持靈活多變的促銷策略。",
     "usecase_routing": "智能路由",
-    "usecase_routing_desc": "支付通道選擇、流量動態分發，基於實時數據自動尋址。"
+    "usecase_routing_desc": "根據實時數據進行支付通道優選和流量動態分發。"
   },
   "code": {
-    "title": "易於定義，秒級執行",
-    "desc": "Ordo 使用直觀的 JSON/YAML 格式定義規則。支持豐富的表達式語法，包括數學運算、邏輯判斷和內置函數。通過簡單的 API 調用，即可在微秒級時間內獲得決策結果與詳細的執行軌跡。",
+    "title": "定義簡單，執行極速",
+    "desc": "Ordo 使用直觀的 JSON/YAML 格式。支持豐富的表達式語法，包括數學、邏輯運算和內置函數。只需簡單的 API 調用即可在微秒級獲得決策結果和詳細追蹤。",
     "step1_title": "結構化規則定義",
-    "step1_desc": "定義步驟流與決策邏輯",
-    "step2_title": "高性能評估",
-    "step2_desc": "極致優化的求值引擎",
-    "step3_title": "可视化追踪",
-    "step3_desc": "詳細的執行路徑溯源"
+    "step1_desc": "定義步驟流轉和決策邏輯",
+    "step2_title": "高性能求值",
+    "step2_desc": "經過優化的求值引擎",
+    "step3_title": "可視化追蹤",
+    "step3_desc": "詳細的執行路徑追蹤"
   },
   "editor": {
     "title": "直觀的可視化編輯器",
-    "desc": "無需編寫代碼即可設計複雜的決策流。Ordo 提供了功能強大的可视化編輯器，支持實時預覽與調試。",
+    "desc": "無需編寫代碼即可設計複雜的決策流程。Ordo 提供強大的可視化編輯器，支持實時預覽和調試。",
     "sidebar_steps": "決策步驟",
     "sidebar_decision": "決策節點",
-    "sidebar_terminal": "終端節點",
+    "sidebar_terminal": "終結節點",
     "sidebar_jump": "跳轉節點",
     "sidebar_config": "規則配置",
-    "cta_playground": "進入 Live Playground 試用",
+    "cta_playground": "試用在線演示",
     "view_multi": "多視圖切換",
-    "view_multi_desc": "在 Flow 視圖與 Form 視圖間無縫切換，適應不同編輯習慣。",
-    "view_wasm": "實時執行預覽",
-    "view_wasm_desc": "基於 WASM 技術，在瀏覽器中即可獲得與服務端完全一致的執行結果。",
-    "view_trace": "執行路徑追踪",
-    "view_trace_desc": "可视化展示規則執行經過的每一個節點，讓邏輯糾錯變得異常簡單。"
+    "view_multi_desc": "無縫切換流程圖和表單視圖，適應不同編輯習慣。",
+    "view_wasm": "實時執行",
+    "view_wasm_desc": "使用 WASM 在瀏覽器中獲得與服務端完全一致的執行結果。",
+    "view_trace": "執行路徑追蹤",
+    "view_trace_desc": "可視化追蹤規則執行的每一個節點，讓調試變得輕鬆自如。"
   },
   "cta": {
-    "title": "準備好提升業務決策效率了嗎？",
-    "desc": "加入我們，體驗極致性能與可视化編輯帶來的開發效率革命。Ordo 已在 GitHub 開源。",
-    "btn_start": "快速開始",
-    "btn_playground": "Playground 演示"
+    "title": "準備好提升您的業務決策了嗎？",
+    "desc": "加入我們，體驗性能與可視化編輯帶來的開發效率革命。Ordo 已在 GitHub 開源。",
+    "btn_start": "開始使用",
+    "btn_playground": "演示 Playground"
   },
   "footer": {
-    "desc": "高性能、極簡、自洽的 Rust 規則引擎。為金融、支付和高併發業務場景而生。",
+    "desc": "高性能、極簡、自包含的 Rust 規則引擎，專為金融、支付和高並發業務打造。",
     "product": "產品",
     "resources": "資源",
     "feedback": "反饋",
-    "license": "開源許可證"
+    "license": "許可"
   },
   "integration": {
-    "title": "全方位集成能力",
-    "desc": "Ordo 提供多種集成方式，無論是微服務架構、瀏覽器端還是本地高性能場景，都能完美適配。",
+    "title": "全方位集成",
+    "desc": "Ordo 提供多種集成方式，完美適配微服務、瀏覽器端或本地高性能場景。",
     "http_create": "創建規則集",
     "http_execute": "執行規則",
-    "grpc_execute": "執行規則並獲取追蹤",
-    "wasm_execute": "瀏覽器端執行規則",
+    "grpc_execute": "帶追蹤執行",
+    "wasm_execute": "瀏覽器端執行",
     "sdk_title": "多語言 SDK 支持",
-    "deploy_title": "部署與接入方式",
-    "deploy_desc": "Ordo 支持從雲端微服務到瀏覽器邊緣端的全場景部署。",
-    "invoke_title": "多樣化調用協議",
-    "invoke_desc": "標準化的接口協議，確保在任何技術棧下都能實現極速響應。",
-    "method_cloud": "雲端服務部署",
-    "method_cloud_desc": "支持 Docker/K8s/Nomad，通過 HTTP/gRPC 提供中心化規則服務。",
-    "method_edge": "邊緣/客戶端接入",
-    "method_edge_desc": "通過 WASM 在瀏覽器或邊緣節點直接執行，零延遲無網絡開銷。",
-    "method_embedded": "原生嵌入集成",
-    "method_embedded_desc": "作為 Rust 庫直接編譯進業務應用，實現真正的零抽象損耗。",
-    "status_stable": "已發布",
+    "deploy_title": "部署與連接",
+    "deploy_desc": "Ordo 支持從雲端微服務到瀏覽器邊緣節點的所有場景。",
+    "invoke_title": "靈活調用協議",
+    "invoke_desc": "標準化的協議確保在任何技術棧中都能獲得極速響應。",
+    "method_cloud": "雲端服務",
+    "method_cloud_desc": "通過 Docker/K8s/Nomad 部署，提供 HTTP/gRPC 服務。",
+    "method_edge": "邊緣與客戶端",
+    "method_edge_desc": "通過 WASM 直接在瀏覽器或邊緣節點執行，零網絡延遲。",
+    "method_embedded": "原生嵌入",
+    "method_embedded_desc": "直接編譯進 Rust 應用，零開銷集成。",
+    "status_stable": "穩定",
     "status_beta": "測試中",
     "status_soon": "即將推出"
   },
   "quickstart": {
     "title": "快速開始",
-    "desc": "通過 Docker 在 2 分鐘內啟動 Ordo Server 並執行你的第一條規則。",
+    "desc": "使用 Docker 在 2 分鐘內啟動 Ordo Server 並執行您的第一條規則。",
     "step1_title": "1. 啟動 Ordo Server",
     "step1_desc": "拉取並運行官方 Docker 鏡像",
-    "step2_title": "2. 確認服務狀態",
+    "step2_title": "2. 驗證狀態",
     "step2_desc": "檢查健康檢查接口",
     "step3_title": "3. 執行規則",
     "step3_desc": "通過 REST API 發送執行請求"
   },
   "syntax": {
-    "title": "表達式語法速查",
-    "desc": "Ordo 使用類 C 語法，支持豐富的運算符與內置函數，性能損耗極低。",
+    "title": "表達式語法",
+    "desc": "Ordo 使用類 C 語法，支持豐富的運算符和內置函數，確保極低的開銷。",
     "operators": "運算符",
-    "functions": "內置函數",
-    "conditionals": "條件表達式",
+    "functions": "函數",
+    "conditionals": "條件語句",
     "op_logical": "邏輯運算",
     "op_comparison": "比較運算",
-    "fn_string": "字串處理",
-    "fn_array": "集合運算",
+    "fn_string": "字符串函數",
+    "fn_array": "數組函數",
     "fn_math": "數學函數"
   },
   "roadmap": {
-    "title": "發展路線圖",
-    "desc": "Ordo 正在快速演進中，致力於成為最快、最易用的企業級規則引擎。",
+    "title": "開發路線圖",
+    "desc": "Ordo 正在快速演進，旨在成為最快、最易用的企業級規則引擎。",
     "status_done": "已完成",
-    "status_doing": "開發中",
-    "status_todo": "規劃中"
+    "status_doing": "進行中",
+    "status_todo": "計劃中"
   }
 }
